ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-svc
  labels:
    app: ingress-svc
spec:
  ports:
  - port: 80
    protocol: TCP
  - port: 443
    protocol: TCP
  selector:
    app: web
  type: ClusterIP
