loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  labels:
    app: web-svc
spec:
  ports:
  - port: 80
    protocol: TCP
  - port: 443
    protocol: TCP
  selector:
    app: web-svc
  type: LoadBalancer
