nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - helloworld.com
    secretName: tls-secret
  rules:
  - host: helloworld.com
    http:
      paths:
        - path: /
          backend:
            serviceName: ingress-svc
            servicePort: 80
